Use temporary compiler for entrypoint.